# CuriousBee

./: .gitignore  Dockerfile  README.md  alembic.ini  app.schema  app.schema.dummydata.py  config.cfg  docker-compose.yml  generator.py  run.sh  setenv.sh  test.py  wait_for_db.py
services/: CMakeLists.txt  config.json  installed.txt  network_build.sh  odb_build.sh  odb_setup.sh  setup.bat  setup.sh
services/base/src/: json.cpp
services/configs/: videos_config.json
services/database_parser/: CMakeLists.txt
services/database_parser/src/: odb_generator.cpp
services/database_parser/test/: odb_generator_test.cpp
services/db/schema/: schema.sql
services/include/base/: logger.h
services/include/database/: all_models-odb.hxx  all_models-odb.ixx  database.h  db_object.h  db_types.h  entitlement.h  group.h  models.h  user.h
services/include/database_parser/: odb_generator.h
services/include/messages/: network_msg.capnp.h
services/include/network/: factory_builder.h  message_type.h  network_message.h  reply.h  request.h  test_reply.h  test_request.h  youtube_blog.h  youtube_blog_heartbeat.h  youtube_blog_snapshot_request.h  youtube_blog_snapshot_response.h  youtube_blog_updates.h  youtube_resource.h  youtube_resource_heartbeat.h  youtube_resource_snapshot_request.h  youtube_resource_snapshot_response.h  youtube_resource_updates.h  youtube_video.h  youtube_video_heartbeat.h  youtube_video_snapshot_request.h  youtube_video_snapshot_response.h  youtube_video_updates.h
services/include/network_parser/: bracket_schema_parser.h  capnp_generator.h  cpp_generator.h  cpp_header_generator.h  cpp_impl_generator.h
services/include/odb/: all_models-odb-odb.hxx  all_models-odb-odb.ixx  entitlement-odb-odb.h  entitlement-odb.cxx  entitlement.sql  group-odb-odb.h  group-odb.cxx  user-odb-odb.h  user-odb.cxx  user-odb.ixx  user.sql
services/include/parser/: bracket_schema_parser.h  capnp_generator.h  cpp_generator.h  cpp_header_generator.h  cpp_impl_generator.h  types.h
services/include/parsers/database/: odb_generator.h  table_parser.h  types.h
services/include/parsers/network/: bracket_schema_parser.h  capnp_generator.h  cpp_generator.h  cpp_header_generator.h  cpp_impl_generator.h  tokenizer.h  types.h
services/include/server/: listener.h  logger.h  server.h  server_config.h
services/include/videosd/: videos_server.h
services/messages/: CMakeLists.txt
services/messages/dslgen/: dslgen.cpp
services/messages/src/: network_msg.capnp
services/network/: CMakeLists.txt
services/network/schema/: application.schema
services/network/src/: network_message.cpp  youtube_video.cpp  youtube_video_snapshot_request.cpp  youtube_video_snapshot_response.cpp
services/network/src/readonly/: __network_message__.cpp  __reply__.cpp  __request__.cpp  __test_reply__.cpp  __test_request__.cpp  __youtube_blog__.cpp  __youtube_blog_heartbeat__.cpp  __youtube_blog_snapshot_request__.cpp  __youtube_blog_snapshot_response__.cpp  __youtube_resource_heartbeat__.cpp  __youtube_resource_snapshot_request__.cpp  __youtube_resource_updates__.cpp  __youtube_video__.cpp  __youtube_video_heartbeat__.cpp  __youtube_video_snapshot_request__.cpp  __youtube_video_snapshot_response__.cpp
services/network_parser/: CMakeLists.txt
services/network_parser/src/: bracket_schema_parser.cpp  capnp_generator.cpp  cpp_header_generator.cpp  cpp_impl_generator.cpp  parser.cpp  tokenizer.cpp  utils.cpp
services/parser/: CMakeLists.txt
services/parser/src/: bracket_schema_parser.cpp  capnp_generator.cpp  cpp_header_generator.cpp  cpp_impl_generator.cpp  parser.cpp  tokenizer.cpp  utils.cpp
services/parsers/: CMakeLists.txt
services/parsers/database/: CMakeLists.txt
services/parsers/network/: CMakeLists.txt
services/parsers/network/src/: bracket_schema_parser.cpp  capnp_generator.cpp  parser.cpp  tokenizer.cpp  utils.cpp
services/releases/: db_test
services/schemas/: database.dsl  network_msg.capnp  schema.sql
services/server/: CMakeLists.txt
services/server/src/: server.cpp  server_config.cpp
services/src/: CMakeLists.txt
services/src/base/: CMakeLists.txt
services/src/base/src/: logger.cpp
services/src/database/: CMakeLists.txt
services/src/database/src/: database.cpp  entitlement.cpp  group.cpp  user.cpp
services/src/include/network/: message_type.h  reply.h  request.h  test_reply.h  test_request.h  youtube_blog_snapshot_response.h
services/src/include/parsers/network/: utils.h
services/src/messages/: CMakeLists.txt
services/src/messages/deprecated/: dslgen.cpp
services/src/messages/schema/: database.dsl
services/src/messages/src/: network_msg.capnp.c++
services/src/network/: CMakeLists.txt
services/src/network/src/: reply.cpp  request.cpp  test_reply.cpp  test_request.cpp
services/src/network/src/readonly/: __network_message__.cpp  __reply__.cpp  __request__.cpp  __test_reply__.cpp  __test_request__.cpp  __youtube_blog__.cpp  __youtube_blog_heartbeat__.cpp  __youtube_blog_snapshot_request__.cpp  __youtube_blog_snapshot_response__.cpp  __youtube_blog_updates__.cpp  __youtube_resource__.cpp  __youtube_resource_heartbeat__.cpp  __youtube_resource_snapshot_request__.cpp  __youtube_resource_snapshot_response__.cpp  __youtube_resource_updates__.cpp  __youtube_video__.cpp  (+4 more)
services/src/odb/: CMakeLists.txt  all_models-odb-odb.cxx  entitlement-odb-odb.cxx  entitlement-odb.hxx  entitlement-odb.ixx  group-odb-odb.cxx  group-odb.hxx  group-odb.ixx  group.sql  user-odb-odb.cxx  user-odb.hxx
services/src/odb/src/: all_models-odb.cxx
services/src/server/: CMakeLists.txt
services/src/server/src/: server.cpp  server_config.cpp
services/src/tests/: CMakeLists.txt  client_test.cpp  db_test.cpp  hybrid_server_test.cpp  publisher_test.cpp  server_test.cpp  subscriber_test.cpp
services/src/videosd/: CMakeLists.txt
services/src/videosd/src/: videod.cpp  videos_server.cpp
services/src/youtube/: CMakeLists.txt  db_test.cpp  youtube_response.cpp
services/youtube/: youtube_hybrid.cpp  youtube_publisher.cpp  youtube_request.cpp  youtube_response.cpp  youtube_subscriber.cpp
(+477 files in other folders)
